# wrapfile

./: LICENSE  README.md  pyproject.toml
src/wrapfile/: __init__.py  error.py  wrapfile.py
tests/: test_wrapfile.py
